--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=https://api.typogram.in
+REACT_APP_API_URL=https://api.gangajewellers.in
 RAZORPAY_SECRET_KEY=rzp_live_BXDfRjJIduFOfL
 PROFILE_URL=https://objectstorage.ap-mumbai-1.oraclecloud.com/n/bmckhb1inaxt/b/profile-images/o/
