--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 REACT_APP_API_URL=http://localhost:8000
-REACT_APP_GOOGLE_CLIENT_ID=870921722543-knmvv9pokv1h89uqauh0inhte5q4tn8o.apps.googleusercontent.com
+REACT_APP_GOOGLE_CLIENT_ID=your-google-client-id
 REACT_APP_PROFILE_IMAGE_BASE_URL=http://localhost:8000/uploads/profile-images/
 
-# Shop / Ganga Jewellers
+# Shop (e.g. Ganga Jewellers)
 REACT_APP_SHOP_NAME=Ganga Jewellers
-REACT_APP_SHOP_ADDRESS=SEDWADA, HOMEGANJ, IN FRONT OF SINGLE MASJID, ANAND NAGAR, KABIRGANJ, ETAWAH, UTTAR PRADESH 206001
+REACT_APP_SHOP_ADDRESS=Your shop address
 REACT_APP_SHOP_PHONE=+918077256922, 7451849816
 REACT_APP_SHOP_EMAIL=info@gangajewellers.in
 REACT_APP_GSTIN=
