--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=https://api.gangajewellers.in
+REACT_APP_API_URL=https://api.typogram.in
 REACT_APP_GOOGLE_CLIENT_ID=870921722543-knmvv9pokv1h89uqauh0inhte5q4tn8o.apps.googleusercontent.com
 REACT_APP_PROFILE_IMAGE_BASE_URL=https://api.typogram.in/uploads/profile-images/
