chaneges for cgst

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ REACT_APP_SHOP_NAME=Ganga Jewellers
 REACT_APP_SHOP_ADDRESS=Your shop address
 REACT_APP_SHOP_PHONE=+918077256922, 7451849816
 REACT_APP_SHOP_EMAIL=info@gangajewellers.in
-REACT_APP_GSTIN=
+REACT_APP_GSTIN=09AXDPK0044L1ZI
 REACT_APP_SHOP_LOGO=/logo-gj.png
