--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.6.1",
     "@paypal/react-paypal-js": "^8.8.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
@@ -41,19 +42,19 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.0",
     "react-spinners": "^0.15.0",
+    "react-to-print": "^3.2.0",
     "react-toastify": "^10.0.6",
     "react-validation": "^3.0.7",
     "recharts": "^2.12.7",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.5",
     "tailwind-merge": "^3.0.2",
     "use-sound": "^4.0.1",
     "uvcanvas": "^0.2.1",
     "validator": "^13.12.0",
-    "web-vitals": "^2.1.4",
-    "sockjs-client": "^1.6.1",
-    "@stomp/stompjs": "^7.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
