--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
@@ -27,6 +28,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
     "motion": "^12.5.0",
+    "process": "^0.11.10",
     "random-words": "^1.1.2",
     "razorpay": "^2.9.6",
     "react": "^18.0.0",
@@ -58,10 +60,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build:local": "env-cmd -f .env.local react-scripts build",
-    "build:prod": "env-cmd -f .env.prod react-scripts build",
-    "test": "react-scripts test",
+    "start": "NODE_OPTIONS='--no-deprecation' react-app-rewired start",
+    "build:local": "env-cmd -f .env.local react-app-rewired build",
+    "build:prod": "env-cmd -f .env.prod react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "npm run build"
